<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="ST_Record" Id="{a199cdce-21fa-498e-81c8-2f03aec40c9d}">
    <Declaration><![CDATA[TYPE ST_Record :
STRUCT
	test : ARRAY[0..99999] OF DWORD;
	test2 : ARRAY[0..99999] OF DWORD;
	test3 : ARRAY[0..99999] OF DWORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>